# crqa

./: .gitignore  Cargo.toml  README.md  run.sh
examples/cases/: c_clean.c  c_control_flow_bad.c  c_missing_guard.h  c_mixed_risk_bad.c  c_resource_macro_bad.c  cpp_clean.cpp  cpp_exceptions_casts_bad.cpp  cpp_false_positive_clean.cpp  cpp_raw_namespace_bad.hpp  rust_clean.rs  rust_false_positive_clean.rs  rust_panic_unsafe_bad.rs  rust_state_transmute_bad.rs
reports/cases/: all_cases.yaml  c_clean.md  c_control_flow_bad.md  c_missing_guard.md  c_mixed_risk_bad.md  c_resource_macro_bad.md  cpp_clean.md  cpp_exceptions_casts_bad.md  cpp_false_positive_clean.md  cpp_raw_namespace_bad.md  rust_clean.md  rust_false_positive_clean.md  rust_panic_unsafe_bad.md  rust_state_transmute_bad.md
src/: aireview.rs  config.rs  discovery.rs  lib.rs  main.rs  model.rs  parser.rs  report.rs  rules.rs
