[package]
name = "crqa"
version = "0.1.0"
edition = "2024"
description = "A lightweight C/C++/Rust static quality analyzer"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
ignore = "0.4.26"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml_ng = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tree-sitter = "0.26"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-rust = "0.24.2"
